feature 調整對外的api

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.css" type="text/css">
     <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.js"></script>
     <link rel="stylesheet" href="/main.css">
-    <title>Autodesk Forge: My First App</title>
+    <title>Autodesk Forge: APS test app</title>
 </head>
 
 <body>
     <div id="header">
         <img class="logo" src="/logo.png" alt="Autodesk Forge">
-        <span class="title">My First App</span>
+        <span class="title">APS test app</span>
         <select name="models" id="models"></select>
         <button id="upload" title="Upload New Model">＋</button>
+        <button>TestDn</button>
         <input style="display: none" type="file" id="input">
     </div>
     <div id="preview"></div>
